syntax = "proto3";

option java_package = "desidev.p2p";
option java_multiple_files = true;

message BaseMessage {
  MessageClass class = 1;
  MessageType type = 2;

  // request/response, open/close
  optional string txId = 3;

  // response, open
  optional bool accepted = 7;

  // data, seq
  optional uint64 seqId = 4;
  optional bool isReliable = 10;
  optional Body body = 13;
}

message Body {
  optional BodyType bodyType = 1;
  optional bytes data = 2;
}

enum MessageClass {
  request = 0;
  response = 1;
  data = 2;
}

enum MessageType {
  // request, response
  open = 0;
  close = 1;
  ping = 3;

  // data
  seq = 4;
  ack = 5;
}

enum BodyType {
  complete = 0;       // A complete message body (no fragmentation)
  partialStart = 1;   // The start of a fragmented message
  partialMiddle = 2;  // A middle fragment of a fragmented message
  partialEnd = 3;     // The end of a fragmented message
}



